--- a/wdw/wdw.css
+++ b/wdw/wdw.css
@@ -132,6 +132,7 @@ a {
     text-align: center;
     font-family: 'Squada One', Verdana, Geneva, Tahoma, sans-serif;
     line-height: 3vw;
+    margin-top: 3vw;
 }
 
 .grid-image {
@@ -140,12 +141,17 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
+    margin-top: -2vw;
 }
 
 .grid-background {
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 1vw;
     height: 100%;
+}
+
+.grid-background:hover {
+    background-color: rgba(29, 219, 217, 0.8);
 }
 
 .grid-logo {
@@ -157,6 +163,11 @@ a {
 
 .grid-skill {
     text-align: left;
+    color: white;
+    font-size: 4vw;
+    font-family: 'Squada One', Verdana, Geneva, Tahoma, sans-serif;
+    margin-left: 5%;
+    margin-top: -1vw;
 }
 
 /* modals */
