--- a/wdw/wdw.css
+++ b/wdw/wdw.css
@@ -126,13 +126,29 @@ a {
     color: rgb(29, 219, 217);
 }
 
+.grid-background {
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 1vw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin-top: 3vw;
+}
+
+.grid-background:hover {
+    background-color: rgba(29, 219, 217, 0.8);
+}
+
 .grid-name {
     color: white;
     font-size: 3vw;
     text-align: center;
     font-family: 'Squada One', Verdana, Geneva, Tahoma, sans-serif;
-    line-height: 3vw;
-    margin-top: 3vw;
+    line-height: 1;
+    margin-top: 0vw;
+    padding-top: 2vw;
+    align-self: flex-start;
 }
 
 .grid-image {
@@ -141,34 +157,28 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -2vw;
-}
-
-.grid-background {
-    background-color: rgba(255, 255, 255, 0.3);
-    border-radius: 1vw;
-    height: 100%;
-}
-
-.grid-background:hover {
-    background-color: rgba(29, 219, 217, 0.8);
-}
-
-.grid-logo {
-    width: 30%;
-    margin-right: 5%;
-    border-radius: 1vw;
-    float: right;
+    align-self: flex-end;
+    margin-top: -3vw;
 }
 
 .grid-skill {
     text-align: left;
     color: white;
-    font-size: 4vw;
+    font-size: 6vw;
     font-family: 'Squada One', Verdana, Geneva, Tahoma, sans-serif;
     margin-left: 5%;
-    margin-top: -1vw;
+    margin-top: 0vw;
+    margin-bottom: 2vw;
+    align-self: flex-end;
 }
+
+.grid-logo {
+    width: 50%;
+    margin-right: 5%;
+    border-radius: 1vw;
+    float: right;    
+}
+
 
 /* modals */
 
